drools/kie-server-showcase/deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: kie-server-showcase-dep
  namespace: kie-server-showcase
spec:
  selector:
    matchLabels:
      app: kie-server-showcase
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: kie-server-showcase
    spec:
      containers:
        - name: kie-server-showcase
          image: kie-server-showcase-image
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
