drools/kie-server-showcase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kie-server-showcase-svc
  namespace: drools
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: http
      targetPort: 8080
  selector:
    app: kie-server-showcase
